syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc CheckPoints (CheckPointsRequest) returns (CheckPointsReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message CheckPointsRequest {
	double a = 1;
	double b = 2;
	double c = 3;
	double x = 4;
	double y = 5;
}

message CheckPointsReply {
	double a = 1;
	double b = 2;
	double c = 3;
	double x = 4;
	double y = 5;
	bool belongsTo = 6;
}
